metadata/force-app/main/default/objects/CustomName_QhSMC__c/CustomName_QhSMC__c.object-meta.xml
<CustomObject>
    <description>Description_FaUUc</description>
    <label>CustomLabel_TYCYt</label>
    <nameField>
        <label>CustomLabel_TYCYt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_TYCYts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>