metadata/force-app/main/default/objects/CustomName_QhSMC__c/fields/CustomField_HmbFq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_HmbFq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwKggD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>