metadata/force-app/main/default/objects/CustomName_QhSMC__c/fields/CustomField_xilZN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_xilZN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldfetgq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>